completada descripción de la tarea

--- a/index.html
+++ b/index.html
@@ -125,41 +125,33 @@
 						</ol>
 					</p>
 					<p>En todo momento los archivos que generes deberán ir dentro de la carpeta que ya existe con tu nombre y apellidos, el html bajo la ruta iniciada <em>html/</em>, el css bajo la ruta iniciada en <em>resources/css</em> y las imágenes deberán estar descargadas en tu carpeta bajo la ruta <em>resources/img</em></p>
-					<p>Recuerda que, <strong>en todo momento debes estar trabajando en un rama que has creado para tí y en tu fork creado del repositorio Github</strong></p>
+					<p>Recuerda que, <strong>en todo momento debes estar trabajando en la rama que has creado para tí y en tu fork creado del repositorio Github</strong></p>
 					<h3>Recuerda que:</h3>
 					<ul>
-						<li>Todo lo relativo a formato debe ir en tu archivo css propio</li>
+						<li>Todo lo relativo a formato debe ir en tu archivo <em>.css</em> propio</li>
 						<li>Para los links, imágenes y css debes usar siempre rutas relativas</li>
-						<li>Las imágenes deben estar descargadas en tu carpeta img</li>
-						<li>Debes estar haciendo commits cada pocos cambios, haciendo push de vez en cuando y trabajando en una rama que has creado antes de empezar a codificar</li>
-						<li>Dispones de toda la ayuda de internet y manuales del aula virtual</li>
+						<li>Las imágenes deben estar descargadas en tu carpeta <em>img</em></li>
+						<li>Debes estar haciendo commits cada pocos cambios, haciendo push de vez en cuando y trabajando en la rama que has creado antes de empezar a codificar</li>
+						<li>Dispones de toda la ayuda de internet y los manuales del aula virtual</li>
 						<li>Una prueba de que algunas cosas han ido bien será que cuando acabes, el menú de la derecha lleve hasta tus páginas HTML</li>
 					</ul>
 				</div>
 				<div id="index-main">
 					<div class="pair-index izq">
-						<a href="html/conocimiento-libre/conocimiento-libre.html">
+						<a href="resources/img/cv.png" target="_blank">
 							<div>
-								<h2>Conocimiento Libre</h2>
-								<img src="resources/img/conocimiento-libre.jpg" width="300" height="200" alt="Conocimiento Libre">
+								<h2>Páginca CV - index.html</h2>
+								<img src="resources/img/cv.png" width="350" alt="Ejemplo de HTML CV">
 							</div>
 						</a>
-						<!--
-						<div>
-							<a href="https://kahoot.it/" target="_blank"><h3>Reto Conocimiento Libre</h3></a>
-						</div>-->
 					</div>
 					<div class="pair-index der">
-						<a href="html/hacktivismo/hacktivismo.html">
+						<a href="resources/img/galeria.png" target="_blank">
 							<div>
-								<h2>Hacktivismo</h2>
-								<img src="resources/img/hacktivismo.jpg" width="300" height="200" alt="Hacktivismo">
+								<h2>Página de GIFS - galeria.html</h2>
+								<img src="resources/img/galeria.png" width="350" alt="Hacktivismo">
 							</div>
 						</a>
-						<!--
-						<div>
-							<a href="https://kahoot.it/" target="_blank"><h3>Reto Hacktivismo</h3></a>
-						</div>-->
 					</div>
 				</div>
 			</div>
