Corrección de erratas detectadas

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<li>Una página con gifs divertidos con nombre de archivo <strong><em>galeria.html</em></strong></li>
 						</ol>
 					</p>
-					<p>En todo momento los archivos que generes deberán ir dentro de la carpeta que ya existe con tu nombre y apellidos, el html bajo la ruta iniciada <em>html/</em>, el css bajo la ruta iniciada en <em>resources/css</em> y las imágenes deberán estar descargadas en tu carpeta bajo la ruta <em>resources/img</em></p>
+					<p>En todo momento los archivos que generes deberán ir dentro de la carpeta que ya existe con tu nombre y apellidos, el html en la ruta iniciada bajo la carpeta <em>html</em>, el css bajo la ruta <em>resources/css</em> y las imágenes deberán estar descargadas en tu carpeta bajo la ruta <em>resources/img</em></p>
 					<p>Recuerda que, <strong>en todo momento debes estar trabajando en la rama que has creado para tí y en tu fork creado del repositorio Github</strong></p>
 					<h3>Recuerda que:</h3>
 					<ul>
@@ -133,7 +133,7 @@
 						<li>Las imágenes deben estar descargadas en tu carpeta <em>img</em></li>
 						<li>Debes estar haciendo commits cada pocos cambios, haciendo push de vez en cuando y trabajando en la rama que has creado antes de empezar a codificar</li>
 						<li>Dispones de toda la ayuda de internet y los manuales del aula virtual</li>
-						<li>Una prueba de que algunas cosas han ido bien será que cuando acabes, el menú de la derecha lleve hasta tus páginas HTML</li>
+						<li>Una prueba de que algunas cosas han ido bien será que cuando acabes, el menú de esta página lleve hasta tus páginas HTML</li>
 					</ul>
 				</div>
 				<div id="index-main">
