Corrección de erratas detectadas en el header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="titulo-container">
 			<div id="titulo">
 				<h1>Prueba HTML</h1>
-				<p>2ª Evaluación apliaciones ofimáticas - Curso 17/18</p>
+				<p>2ª Evaluación - Módulo Aplicaciones ofimáticas - Curso 17/18</p>
 			</div>
 		</div>
 	</header>
