Corrección de erratas detectadas en el main y reducción de imágenes para versión móvil

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 					<div class="pair-index izq">
 						<a href="resources/img/cv.png" target="_blank">
 							<div>
-								<h2>Páginca CV - index.html</h2>
-								<img src="resources/img/cv.png" width="350" alt="Ejemplo de HTML CV">
+								<h2>Página CV - index.html</h2>
+								<img src="resources/img/cv.png" width="320" alt="Ejemplo de HTML CV">
 							</div>
 						</a>
 					</div>
@@ -149,7 +149,7 @@
 						<a href="resources/img/galeria.png" target="_blank">
 							<div>
 								<h2>Página de GIFS - galeria.html</h2>
-								<img src="resources/img/galeria.png" width="350" alt="Hacktivismo">
+								<img src="resources/img/galeria.png" width="320" alt="Hacktivismo">
 							</div>
 						</a>
 					</div>
