Añado imagenes y html index y galeria

--- a/html/rivera-penalosa-samuel/index.html
+++ b/html/rivera-penalosa-samuel/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="../../resources/img/rivera-peñalosa-samuel/imagen1">
+		<img src="../resources/img/rivera-peñalosa-samuel/imagen1.jpg">
 		<h1>Curriculum Vitae</h1>
 		<p>Samuel Rivera Peñalosa</p>
 	</header>
@@ -17,7 +17,7 @@
 			<li><strong>Nombre:</strong>Samuel Rivera Peñalosa</li>
 			<li><strong>Dirección:</strong>Calle de mi casa</li>
 			<li><strong>Telefono:</strong>612568964</li>
-
+		</ul>		
 		<h2>Formación</h2>
 		<ol>
 			<li>Actualmente cursando Grado Medio sistemas microinformáticos y redes</li>
@@ -35,10 +35,18 @@
     			<td>Medio</td>
     			<td>Bajo</td>
     			<td>Sin conocimiento</td>
+    	<h2>Otros datos de interes</h2>
+    	<ul>
+    		<li>Carnet de conducir</li>
+    		<li>Perfil en GitHub</li>
+    	</ul>
   </tr>
 		</table>
 	</main>
 	<footer>
-		
+		<p>Me despido y te pongo un enlace a la paguina principal</p>
+		<a href="file:///home/alumno/Escritorio/test-html-aofi_17-18/index.html">inicio</a>
 	</footer>
 </body>
+</!DOCTYPE html>
+</html>
