css y algunos cambios

--- a/html/rivera-penalosa-samuel/index.html
+++ b/html/rivera-penalosa-samuel/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Curriculum Vitae</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="../../resources/css/rivera-penalosa-samuel/samuel.css">
 </head>
 <body>
 	<header>
-		<img src="../resources/img/rivera-peñalosa-samuel/imagen1.jpg">
+		<img src="../../resources/img/rivera-penalosa-samuel/imagen1.jpg">
 		<h1>Curriculum Vitae</h1>
 		<p>Samuel Rivera Peñalosa</p>
 	</header>
@@ -35,13 +35,14 @@
     			<td>Medio</td>
     			<td>Bajo</td>
     			<td>Sin conocimiento</td>
+    		</tr>
+    	</table>
     	<h2>Otros datos de interes</h2>
     	<ul>
     		<li>Carnet de conducir</li>
     		<li>Perfil en GitHub</li>
     	</ul>
-  </tr>
-		</table>
+  
 	</main>
 	<footer>
 		<p>Me despido y te pongo un enlace a la paguina principal</p>
