--- a/html/rivera-penalosa-samuel/galeria.html
+++ b/html/rivera-penalosa-samuel/galeria.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Galeria</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="../../resources/css/rivera-penalosa-samuel/samuel.css">
 </head>
 <body>
 	<header>
+		<img src="../../resources/img/rivera-penalosa-samuel/psur-logo.png">
 		<h1>Mi Galería de Imágenes</h1>
 		<p>Samuel Rivera Peñalosa</p>
 		<a href="file:///home/alumno/Escritorio/test-html-aofi_17-18/index.html">inicio</a>
 	</header>
 	<main>
 		<h2>Galería de GIFT</h2>
-		<img src="../../resources/img/rivera-peñalosa-samuel/gif1">
-		<img src="../../resources/img/rivera-peñalosa-samuel/gif2">
-		<img src="../../resources/img/rivera-peñalosa-samuel/gif3">
+		<img src="../../resources/img/rivera-penalosa-samuel/gift1.gif">
+		<img src="../../resources/img/rivera-penalosa-samuel/gift2.gif">
+		<img src="../../resources/img/rivera-penalosa-samuel/gift3.gif">
 	</main>
 	<footer>
 		<p>La galería de Samuel</p>
