añado galeria.html

--- a/html/canas-vidaller-manuel/index.html
+++ b/html/canas-vidaller-manuel/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/css/canas-vidaller-manuel/style.css">
 </head>
 <body>
-	<header>
+	<header id="header1">
 			<div id="titulo-container">
 				<div id="titulo">
 					<h1>Curriculum Vitae</h1>
