correccion del enlace de inicio

--- a/html/canas-vidaller-manuel/galeria.html
+++ b/html/canas-vidaller-manuel/galeria.html
@@ -13,7 +13,7 @@
 					<h1>Mi Galería de Imágenes</h1>
 					<p>Manuel Cañas Vidaller</p>
 					<ul>
-				<li id="li"><a href="#"><u>Ir Al Inicio</u></a></li>
+				<li id="li"><a href="../../index.html"><u>Ir Al Inicio</u></a></li>
 					</ul>
 				</div>
 			</div>
