--- a/html/canas-vidaller-manuel/index.html
+++ b/html/canas-vidaller-manuel/index.html
@@ -50,7 +50,7 @@
 <footer>
 	<p>El el pie de página me despido y pongo un link a la página inicial</p>
 	<ul>
-				<li id="li"><a href="#"><u>Ir Al Inicio</u></a></li>
+				<li id="li"><a href="../../index.html"><u>Ir Al Inicio</u></a></li>
 	</ul>
 </footer>
 
