--- a/html/sanchez-argote-joan-andrez/index.html
+++ b/html/sanchez-argote-joan-andrez/index.html
@@ -30,9 +30,33 @@
 			<li>Actualmente estoy en una formacion profesional</li>
 		</ol>
 		<ol>
-			<li></li>
+			<li>Cursos dados de c++, scrach, Arduino, Prosessing</li>
 		</ol>
 
+	<h2><strong>IDIOMAS</strong></h2>
+		
+		<table width="571" height="52">
+<tbody>
+	<tr>
+		<td style="width: 183px;">Ingles</td>
+		<td style="width: 183px;">Frances</td>
+		<td style="width: 183px;"></td>
+</tr>
+	<tr>
+		<td style="width: 183px;">Medio-Alto</td>
+		<td style="width: 183px;">Bajo-medio</td>
+		<td style="width: 183px;"></td>
+</tr>
+	</tbody>
+	</table>
+<p></p> 
+
+<h2><strong>DATOS DE INTERES</strong></h2>
+	<ul>
+		<li>Perfil Instagram</li>
+		<li>Perfin de Facebook</li>
+		<li>Perfil de Twiter</li>
+	</ul>
 
 </body>
 </html>
