--- a/html/cadena-garcia-jesus-angel/index.html
+++ b/html/cadena-garcia-jesus-angel/index.html
@@ -2,28 +2,52 @@
 <head>
 	<html lan="es">
 	<meta charset="utf-8">
-	<title>Mi curriculum online</title>	
+	<title>Mi curriculum online</title>
+	<link  rel="stylesheet" type="text/css" href="../../resources/css/cadena-garcia-jesus-angel/index.css">	
 </head>
 	<header>
 		<h1>Curriculum Vitae</h1>
-		<img src="../../resources/img/cadena-garcia-jesus-angel/imagen1-cadena.jpeg"/>
+		<img src="../../resources/img/cadena-garcia-jesus-angel/imagen1-cadena.jpeg">
 		<h2> Jesús Cadena García</h2>
 	</header>
 <body>
-	<h1>datos personales</h1>
-	<ul>
-	<li><strong>nombre:</strong>Jesús Ángel Cadena García</li>
-	<Li><strong>Dirección:</strong>Calle 8 de marzo</Li>
-	</ul
+	<main>
+		<h1>datos personales</h1>
+		<ul>
+			<li><strong>nombre:</strong>Jesús Ángel Cadena García</li>
+			<Li><strong>Dirección:</strong>Calle 8 de marzo</Li>
+			<li><strong>Telefono:</strong>954 65 24 28</li>
+		</ul>
+		<h1>Formación</h1>
+		<ol>
+			<li>Actualmente cursando grado medio de SMR</li>
+			<li> Actualmente intentando conseguir el titulo b1 de Inglés </li>
+			<li> Actualmente intentando probar este examen </li>
+
+		</ol>
+		<h1>idiomas</h1>
 		
-	<p> 
+			<h1>Otros datos de interes</h1>
+		<ul>
+			<li><a href="#">Facebook.com</a></li>
+			<li><a href="#">twitter.com</a></li>
+			<li><a href="#">Airsoft.com</a></li>
+
+			
+		</ul>
+		<footer>
+			<p>Este es el pie de pagina donde me despido y pongo un enlace a la pagina inicial</p>
+		</footer>
+
+	</main>
+		
 	
 	
 
 	 
-	 </ul>
+	
 		
-	</p>
+	
 	
 
 </body>
