css y algunos cambios

--- a/html/rivera-penalosa-samuel/index.html
+++ b/html/rivera-penalosa-samuel/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<header>
+		<div id="imagen1">
 		<img src="../../resources/img/rivera-penalosa-samuel/imagen1.jpg">
+		</div>
 		<h1>Curriculum Vitae</h1>
 		<p>Samuel Rivera Peñalosa</p>
 	</header>
@@ -45,8 +47,9 @@
   
 	</main>
 	<footer>
-		<p>Me despido y te pongo un enlace a la paguina principal</p>
+		<p>Me despido y te pongo un enlace a la paguina principal<br>
 		<a href="file:///home/alumno/Escritorio/test-html-aofi_17-18/index.html">inicio</a>
+		</p>
 	</footer>
 </body>
 </!DOCTYPE html>
