Subo una posible solución del examen como ejemplo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 				<ul>
 					<li><a href="#">Inicio</a></li>
 					<ul>
+						<li><a href='html/serrano-luque-eduardo/index.html'>CV Solución</a>
+							<ul>
+								<li><a href='html/serrano-luque-eduardo/galeria.html'>Galería Solución</a></li>
+							</ul>
+						</li>
 						<li><a href='html/bernal-ramirez-francisco-javier/index.html'>CV Bernal Ramírez, Francisco Javier</a>
 							<ul>
 								<li><a href='html/bernal-ramirez-francisco-javier/galeria.html'>Galería Bernal Ramírez, Francisco Javier</a></li>
