contenido completo cv

--- a/html/solucion_examen/index.html
+++ b/html/solucion_examen/index.html
@@ -18,7 +18,7 @@
 		<div id="main-container">
 			<div id="general-content">
 				<div>
-					<h2>Datos personales</h1>
+					<h2>Datos personales</h2>
 						<ul>
 							<li><b>Nombre:</b> Eduardo Serrano Luque.</li>
 							<li><b>Dirección:</b> Calle Calatrava nº23, 3º IZD, C.P. 41006, Sevilla</li>
@@ -56,7 +56,7 @@
 		</div>
 	</main>
 	<footer>
-		<p>IES POLÍGONO SUR</p>
+		<p>Este es el pie de página donde me despido y te pongo un enlace a la pagina inicial<br><a href="../../index.html">Ir al Inicio</a></p>
 	</footer>
 </body>
 </html>
